--- a/juhe_V3.4_base_world/CMAdSdkDemo/local.properties
+++ b/juhe_V3.4_base_world/CMAdSdkDemo/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu May 12 13:47:52 CST 2016
-sdk.dir=D\:\\sdk\\sdk
+#Fri May 13 15:55:09 CST 2016
+ndk.dir=/Users/zejian/Documents/android-sdk/ndk-bundle
+sdk.dir=/Users/zejian/Documents/android-sdk
