--- a/juhe_V3.4_base_world/CMAdSdkDemo/build.gradle
+++ b/juhe_V3.4_base_world/CMAdSdkDemo/build.gradle
@@ -22,7 +22,7 @@ android {
     productFlavors {
         world {
             applicationId "com.cmcm.ads"
-            buildConfigField "boolean", "IS_CN_VERSION", "true"
+            buildConfigField "boolean", "IS_CN_VERSION", "false"
         }
     }
 
@@ -42,7 +42,7 @@ repositories {
 
 
 dependencies {
-    compile(name: 'cmadsdk_world_base_V3.4.4', ext: 'aar')
+    compile(name: 'cmadsdk_world_base_V3.4.5', ext: 'aar')
     compile 'com.android.support:support-v4:22.2.0'
     compile files('libs/volley.jar')
 }
