--- a/juhe_V3.4_ext_world/CMAdSdkDemo/local.properties
+++ b/juhe_V3.4_ext_world/CMAdSdkDemo/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri May 13 17:35:47 CST 2016
-sdk.dir=D\:\\sdk\\sdk
+#Tue May 17 20:43:26 CST 2016
+sdk.dir=C\:\\Users\\cm\\AppData\\Local\\Android\\sdk
